--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pr-auto-label",
   "module": "index.ts",
   "type": "module",
+  "version": "1.0.0",
   "devDependencies": {
     "bun-types": "latest"
   },
