--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "version": "1.0.0",
+  "scripts": {
+    "release": "release-it"
+  },
   "devDependencies": {
     "bun-types": "latest"
   },
@@ -12,6 +15,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "release-it": "^16.2.1",
     "typescript": "latest"
   }
 }
