--- a/action.yml
+++ b/action.yml
@@ -9,10 +9,14 @@ runs:
       uses: oven-sh/setup-bun@v1
       with:
         bun-version: latest
+
+    - name: Pull files
+      uses: actions/checkout@v3
     
     - name: Install dependencies
       shell: bash
       run: |
+        ls
         bun install
         bun run index.ts
     
