--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,8 @@ runs:
     
     - name: Install dependencies
       shell: bash
+      working-directory: ./
       run: |
-        cd ./
         bun install
         bun run index.ts
     
