--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "export": "./dist/index.js",
   "scripts": {
     "build": "bun build --minify ./index.ts --outfile=./dist/index.js",
-    "release": "release-it"
+    "release": "build && release-it"
   },
   "devDependencies": {
     "bun-types": "latest"
