--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "pr-auto-label",
-  "module": "index.ts",
+  "module": "index.js",
   "type": "module",
   "version": "1.0.12",
-  "export": "./dist/index.js",
   "scripts": {
-    "build": "bun build ./index.ts --outfile=./dist/index.js --target node",
     "release": "release-it"
-  },
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "release-it": "^16.2.1",
-    "typescript": "latest"
+    "typescript": "^5.0.0"
   }
 }
