--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "version": "1.0.15",
   "scripts": {
-    "build": "npx @vercel/ncc build index.js",
-    "release": "release-it"
+    "build": "npx @vercel/ncc build index.js"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
