--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "build": "npx @vercel/ncc build index.js"
+    "build": "ncc build index.js"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@vercel/ncc": "^0.38.1",
     "typescript": "^5.0.0"
   }
 }
