--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "pr-auto-label",
-  "module": "index.js",
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "build": "ncc build index.js"
+    "build": "ncc build index.ts"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@vercel/ncc": "^0.38.1",
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.7"
   }
 }
