--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20.8.7"
   }
 }
